@startuml

class Parent {
  + id (PK) : int
  + name : String
  + firstname : String
  + email : String
  + password : String
}

class Profile {
  + id (PK) : int
  + parent_id (FK) : int  *..> Parent : created by
  + name : String
  + avatar : String  ' URL or type of the avatar
 + theme_color : String  ' Optional
}

class Exercise {
  + id (PK) : int
  + exercise_type : String
  + difficulty : int
  + instructions : String
  + chapter_id (FK) : int  *..> Chapter : Belongs To
}

class Chapter {
  + id (PK) : int
  + name : String
  + description : String
  + order : int
  + badge_id (FK) : int  *..> Badge : Grants (One Chapter grants One Badge)
}

class Badge {
  + id (PK) : int
  + name : String
  + image_url : String  ' Optional
  + description : String  ' Optional
}

class Progression {
  + id (PK) : int
  + profile_id (FK) : int  *..> Profile : Has Progression
  + chapter_id (FK) : int  *..> Chapter : Belongs To (with progress)
  + score : int  ' Optional
  + completed : boolean
  + date : Date
  + progress : decimal  ' Chapter-specific progress (0.0 to 1.0)
}

class OverallProgress {
  + id (PK) : int
  + profile_id (FK) : int  *..> Profile : Has Overall Progress
  + total_chapters_completed : int
  + total_badges_earned : int
  + average_score : decimal
}

class Settings {
  + id (PK) : int
  + profile_id (FK) : int  *..> Profile : has settings
  + maxExercisesPerDay : int
  + maxTimePerDay : int  ' in minutes
}

Chapter "1, 1" -- "1,1" Badge : grants
Profile "1,1" -- "1,N" Progression : has
Progression "1,1" -- "1,1" Chapter : tracks progress for
Profile "1,1" -- "1,1" OverallProgress : has overall progress
Profile "1, 1" -- "1, 1" Settings : has settings
Parent "1, 1" -- "1, N" Settings : influences
Profile "1,N" -- "1,N" Badge : earns through < Chapter >
Exercise "1,N" -- "1,1" Chapter : belongs to
Profile "1,N" -- "1,1" Parent : created by

@enduml